hphp/hack/test/typecheck/xhp_attr_20.php.exp
File "xhp_attr_20.php", line 8, characters 13-16:
Invalid xhp value (Typing[4110])
File "xhp_attr_20.php", line 4, characters 13-15:
This is an int
File "xhp_attr_20.php", line 8, characters 13-16:
It is incompatible with a nullable type
